--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=product-app
+spring.application.name=shop-interview-project
 spring.datasource.url=jdbc:h2:mem:shopdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=eva
